--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "com.example.jeremy.tagsaver"
-        minSdkVersion 21
+        applicationId "com.example.tagsaver"
+        minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
