--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 07 22:21:43 PDT 2017
-sdk.dir=C\:\\Users\\Jeremy\\AppData\\Local\\Android\\Sdk
+#Fri Jun 09 11:15:18 PDT 2017
+sdk.dir=/Users/nathan/Library/Android/sdk
