--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
         </activity>
         <activity android:name=".Adder"
             android:label="New Category"
+            android:parentActivityName=".MainActivity"
             >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
 
         </activity>
         <activity android:name=".Editor"
