added new field in recycler views

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,8 +39,11 @@
         </activity>
         <activity android:name=".Editor"
             android:label="Edit Category"
+            android:parentActivityName=".MainActivity"
             >
-
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
         </activity>
 
     </application>
