refactor and edit view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
                 android:value=".MainActivity"/>
 
         </activity>
-        <activity android:name=".Editor"
+        <activity android:name=".Editer"
             android:label="Edit Category"
             android:parentActivityName=".MainActivity"
             >
